feat: utilize structured Gemini output
