# api/api.yaml
@@ -81,7 +81,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Answer"
+                $ref: "#/components/schemas/Response"
 
 components:
   schemas:
@@ -152,7 +152,7 @@ components:
           items:
             type: string
             format: uuid
-    Answer:
+    Response:
       type: object
       required:
         - question
@@ -164,8 +164,8 @@ components:
           type: array
           items:
             type: object
-            $ref: "#/components/schemas/AnswerItem"
-    AnswerItem:
+            $ref: "#/components/schemas/Answer"
+    Answer:
       type: object
       required:
         - text
@@ -173,5 +173,15 @@ components:
         text:
           type: string
         metric:
+          type: object
+          $ref: "#/components/schemas/MetricValue"
+    MetricValue:
+      type: object
+      required:
+        - value
+      properties:
+        value:
           type: number
           format: double
+        unit:
+          type: string
